# nk-project

./: .gitignore  CMakeLists.txt  README.md  Test.sh  test.sh
CMake/: NK_ANSICDemand.cmake  NK_ASanSupport.cmake  NK_GenerateTests.cmake  NK_TestEnvironment.cmake
include/NK/: Config.h  Core.h  Decoders.h  Diagnostics.h  Enums.h  IO.h  Memory.h  NK.h  Task.h
include/NK/Core/: Crash.h  Panic.h  Validator.h
include/NK/Core/Memory/: Allocator.h
include/NK/Core/Memory/Allocator/: Implementations.h  Redirects.h
include/NK/Decoders/: ArgumentParser.h
include/NK/Diagnostics/: ErrorHandler.h  Validator.h
include/NK/Enums/: Decoders.h  Diagnostics.h  Task.h
include/NK/Enums/Decoders/: ArgumentParser.h
include/NK/Enums/Diagnostics/: Validator.h
include/NK/Enums/Task/: Coroutine.h  StateMachine.h
include/NK/IO/: Reader.h  Readers.h
include/NK/IO/Readers/: File.h
include/NK/Internals/Subsystems/: GlobalAllocatorStatistics.h
include/NK/Internals/Types/: StringPool.h  Table.h
include/NK/Memory/: Allocator.h  AllocatorStatistics.h
include/NK/Memory/Allocator/: Implementations.h  Redirects.h
include/NK/Task/: Coroutine.h  StateMachine.h
include/NK/Types/: Containers.h
include/NK/Types/Containers/: Any.h  Map.h  Set.h  Vector.h
include/NK/Types/String/: Dynamic.h  Submerged.h
src/NK/Core/: Panic.c  Reader.c  Validator.c
src/NK/Core/Memory/Allocator/: Implementations.c
src/NK/Core/Readers/: File.c
src/NK/Decoders/: ArgumentParser.c
src/NK/Diagnostics/: ErrorHandler.c  Validator.c
src/NK/IO/: Reader.c
src/NK/IO/Readers/: File.c
src/NK/Internals/: Hash.c
src/NK/Internals/Types/: StringPool.c  Table.c
src/NK/Internals/Types/Table/: Get.c  InsertOrAssign.c  Remove.c
src/NK/Memory/Allocator/: Implementations.c
src/NK/Task/: Coroutine.c  StateMachine.c
src/NK/Types/Containers/: Any.c  Map.c  Queue.c  Set.c  Vector.c
src/NK/Types/String/: Dynamic.c  Submerged.c
tests/: NKSet.c  NKValidator.c
tests/Base/: NKArgumentParser.c  NKDynamicStrings.c  NKInit.c  NKMapInsertion.c  NKValidator.c
